# RPB_ColorConnections

./: #main.cpp#  .#main.cpp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RPB_4  RPB_ColorConnections.cbp  RPB_ColorConnections.depend  RPB_ColorConnections.layout  cmake_install.cmake  main.cpp  worldofcolor.csv
HelloLumiverse/HelloLumiverse/: CMakeLists.txt  HelloLumiverse.cbp  HelloLumiverse.layout  client.c  main.cpp
HelloLumiverse/HelloLumiverse/Example Server Code/: server.c
HelloLumiverse/HelloLumiverse/client-server.tar/: client-server.tar
Lumiverse/: CMakeCache.txt  Lumiverse.cbp  Makefile  cmake_install.cmake
Lumiverse/Demos/: Makefile  cmake_install.cmake
Lumiverse/Demos/LumiverseDemo/: Makefile  cmake_install.cmake
Lumiverse/Demos/SpeedTest/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/Cholesky/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/CholmodSupport/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/Core/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/Eigen2Support/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/Eigenvalues/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/Geometry/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/Householder/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/IterativeLinearSolvers/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/Jacobi/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/LU/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/MetisSupport/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/OrderingMethods/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/PaStiXSupport/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/PardisoSupport/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/Eigen/src/QR/: Makefile  (+1 more)
Lumiverse/LumiverseCore/lib/clp/: Makefile  cmake_install.cmake
Lumiverse/LumiverseCore/lib/libjson/: Makefile  cmake_install.cmake
Lumiverse/LumiverseShowControl/: Makefile  cmake_install.cmake
Lumiverse/Test/: Makefile  cmake_install.cmake
arduino&client/: client_receiver.py
arduino&client/fake_main/: fake_main.ino  pir.h
arduino&client/fake_main/libraries/: message.h  sensor_main.h
arduino&client/sensor_main/: message.h  sensor_main.h  sensor_main.ino
arduino&client/sensor_main/libraries/: pir.cpp
include/: BridgeInterface.h  BridgeModel.h  BridgePlayer.h  BridgePlayer.h~  Color.h  ColorPanel.h  MainLoop.h  TravelingColor.h
python/: server.py
src/: #MainLoop.cpp#  .#BridgePlayer.cpp  .#MainLoop.cpp  ArduinoServer.cpp  BridgeInterface.cpp  BridgeModel.cpp  BridgePlayer.cpp  BridgeServer.cpp  Color.cpp  ColorPanel.cpp  MainLoop.cpp  TravelingColor.cpp  a.out
(+42 files in other folders)
